--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -42,7 +42,8 @@ text-align: center;
     font-size: large;
 }
 .card{
-    background-color: rgb(0, 149, 255);
+    background-color: rgb(118, 198, 242);
+    opacity: 0.7;
     
 }
 .card2{
@@ -70,4 +71,23 @@ text-align: center;
 body{
     cursor: url(../images/cursor.png),auto;
 }
-
+.h4{
+color: aliceblue;
+}
+.button{
+    width: 0,12;
+    border-radius:200px;
+    background-color: rgb(14, 14, 13);
+    margin-top: 25%; 
+    margin-left:10%; 
+    width: 30%;
+    height: 50px
+}
+.imgRedonda{
+    width:350px;
+    height:350px;
+    border-radius:200px;
+}
+.libreria{
+    background-color: rgb(53, 51, 51);
+}
